--- a/Praktikum1/SimpleLinearRegression.ipynb
+++ b/Praktikum1/SimpleLinearRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUoZ58PBB/yFSaLavZ+M/M",
+      "authorship_tag": "ABX9TyP+4NZgszJ/HVdyuE9kIUjx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,8 +36,20 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- Melakukan import library pandas yang dialiaskan sebagai pd\n",
+        "- Membuat sampel data berupa data luas dan data harga\n",
+        "- Membuat dataframe dari sampel dengan nama variabel df\n",
+        "- Menampilkan dataframe df"
+      ],
+      "metadata": {
+        "id": "mxwJq-v6gdL2"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -388,13 +400,13 @@
         }
       ],
       "source": [
-        "import pandas as pd\n",
+        "import pandas as pd #import library pandas\n",
         "\n",
-        "data = {'luas' : [6,8,10,14,18],\n",
-        "        'harga' : [7,9,13,17.5,18]}\n",
+        "data = {'luas' : [6,8,10,14,18], #membuat data sampel untuk luas\n",
+        "        'harga' : [7,9,13,17.5,18]} #membuat data sampel untuk harga\n",
         "\n",
-        "df = pd.DataFrame(data)\n",
-        "df"
+        "df = pd.DataFrame(data) #membuat dataframe dari data sampel dengan nama df\n",
+        "df #menampilkan dataframe df"
       ]
     },
     {
@@ -407,17 +419,33 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Pada tahapan ini dilakukan:\n",
+        "- import library matplotlib untuk visualisasi data\n",
+        "- Membuat scatterplot dari dataframe\n",
+        "- Menambahkan judul grafik\n",
+        "- Menambahkan label untuk sumbu x dan sumbu y\n",
+        "- Mengatur batas sumbu x dan y\n",
+        "- Menampilkan f=grid pada grafik\n",
+        "- Menampilkan grafik"
+      ],
+      "metadata": {
+        "id": "SvUW-yPdh-7n"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "df.plot(kind='scatter', x='luas', y='harga')\n",
-        "plt.title(\"Perbandingan Luas Tanah dengan Harga Tanah\")\n",
-        "plt.xlabel(\"Luas Tanah (m persegi)\")\n",
-        "plt.ylabel(\"Harga Tanah (dolar)\")\n",
-        "plt.xlim(0,25)\n",
-        "plt.ylim(0,25)\n",
-        "plt.grid(True)\n",
-        "plt.show()"
+        "import matplotlib.pyplot as plt #import library matplotlib\n",
+        "df.plot(kind='scatter', x='luas', y='harga') #membuat plot jenis scatter dengan luas sebagai sumbu x dan harga sebagai sumbu y\n",
+        "plt.title(\"Perbandingan Luas Tanah dengan Harga Tanah\") # memberi judul untuk grafik\n",
+        "plt.xlabel(\"Luas Tanah (m persegi)\") #memberi label untuk sumbu x yaitu luas\n",
+        "plt.ylabel(\"Harga Tanah (dolar)\")#memberi label untuk sumbu y yaitu harga\n",
+        "plt.xlim(0,25) #menemtukan batas sumbu x adalah 25\n",
+        "plt.ylim(0,25) #menentukan batas sumbu y adalah 25\n",
+        "plt.grid(True) #menampilkan grid pada grafik\n",
+        "plt.show() #menampilkan scatter plot yang telah dibuat"
       ],
       "metadata": {
         "colab": {
@@ -427,7 +455,7 @@
         "id": "EGyRlfWcP5MF",
         "outputId": "f610971f-d414-48ef-fea9-b1cf5f5e2078"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -442,11 +470,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Mengubah data dalam DataFrame menjadi array NumPy agar lebih efisien untuk analisis numerik"
+      ],
+      "metadata": {
+        "id": "nCtaJ8EXjQBh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "X=np.array(df['luas'])\n",
-        "y=np.array(df['harga'])\n",
+        "import numpy as np #import library numpy untuk perhitungan numerik\n",
+        "X=np.array(df['luas']) #Mengonversi Kolom 'luas' Menjadi Array NumPy dengan nama X\n",
+        "y=np.array(df['harga']) #Mengonversi Kolom 'harga' Menjadi Array NumPy dengan nama sumbu y\n",
+        "#Menampilkan Nilai Array X dan y\n",
         "print(f'X : {X}')\n",
         "print(f'y : {y}')"
       ],
@@ -457,7 +495,7 @@
         "id": "IN1wHizHRQjv",
         "outputId": "4d58291b-db8e-4fd6-8e86-0448e328c16c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,11 +508,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Mengubah bentuk array X dari 1D (vektor baris) menjadi 2D (vektor kolom) menggunakan fungsi reshape"
+      ],
+      "metadata": {
+        "id": "_CTtxQiCj2Sx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "X=X.reshape(-1,1)\n",
-        "print(f'X shape : {X.shape}')\n",
-        "print(f'X : {X}')"
+        "X=X.reshape(-1,1) #mengubah x menjadi 2D\n",
+        "print(f'X shape : {X.shape}') #menampilkan bentuk shape dari x\n",
+        "print(f'X : {X}') #Menampilkan isi dari X setelah di reshape menjadi 2D"
       ],
       "metadata": {
         "colab": {
@@ -483,7 +530,7 @@
         "id": "qMHOT5sBRhd0",
         "outputId": "ae4efba6-27ac-49de-d222-7a84b82c3905"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,11 +556,20 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Melakukan modelling menggunakan LinearRegression untuk membuat model regresi linear, yang memprediksi hubungan antara variabel independen (X) dan variabel dependen (y).\n"
+      ],
+      "metadata": {
+        "id": "_mDuvlAHmL1k"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "from sklearn.linear_model import LinearRegression\n",
-        "model = LinearRegression()\n",
-        "model.fit(X,y)"
+        "from sklearn.linear_model import LinearRegression #import linear regression dari library\n",
+        "model = LinearRegression() #Membuat objek model dari kelas LinearRegression()\n",
+        "model.fit(X,y) #Melatih Model dengan Data"
       ],
       "metadata": {
         "colab": {
@@ -523,7 +579,7 @@
         "id": "ZG1BcEBRSDnE",
         "outputId": "180d0945-8af2-43ca-d1f5-ca9dc3f83abd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,27 +1012,46 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "X_vis=np.array([0,25]).reshape(-1,1)\n",
-        "y_vis=model.predict(X_vis)"
+        "- Membuat array X_vis\n",
+        "- Memprediksi nilai y dari X_vis"
       ],
       "metadata": {
-        "id": "P64_oKEhSur1"
-      },
-      "execution_count": 13,
-      "outputs": []
+        "id": "23NyU51aoFAD"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "plt.scatter(X,y)\n",
-        "plt.plot(X_vis,y_vis,color='red')\n",
-        "plt.title(\"Perbandingan Luas Tanah dengan Harga Tanah\")\n",
-        "plt.xlabel(\"Luas Tanah (m persegi)\")\n",
-        "plt.ylabel(\"Harga Tanah (dolar)\")\n",
-        "plt.grid(True)\n",
-        "plt.show()"
+        "X_vis=np.array([0,25]).reshape(-1,1) #Membuat Array X_vis\n",
+        "y_vis=model.predict(X_vis) #Memprediksi Nilai y dari X_vis"
+      ],
+      "metadata": {
+        "id": "P64_oKEhSur1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kode ini menampilkan scatter plot data asli dan garis regresi linier dalam satu grafik untuk memvisualisasikan hubungan antara luas tanah dan harga tanah"
+      ],
+      "metadata": {
+        "id": "CdbdlcWKokFe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.scatter(X,y) #membuat scatter plot dengan menggunakan data X dan y\n",
+        "plt.plot(X_vis,y_vis,color='red') #menggambar garis regresi linier menggunakan prediksi model\n",
+        "plt.title(\"Perbandingan Luas Tanah dengan Harga Tanah\") #membuat judul untuk scatter plot\n",
+        "plt.xlabel(\"Luas Tanah (m persegi)\") #memberi label untuk sumbu x atau luas\n",
+        "plt.ylabel(\"Harga Tanah (dolar)\") #memberi label untuk sumbu y atau  harga\n",
+        "plt.grid(True) #menampilkan grid pada grafik\n",
+        "plt.show() #menampilkan grafik"
       ],
       "metadata": {
         "colab": {
@@ -986,7 +1061,7 @@
         "id": "DvQB6NGNS74r",
         "outputId": "475a2be3-1e19-4fe2-a4b6-988edc1152f1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1020,10 +1095,20 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- Menampilkan nilai intercept (titik potong dengan sumbu Y)\n",
+        "- Menampilkan nilai slope (Koefisien Kemiringan)"
+      ],
+      "metadata": {
+        "id": "9CGEfnmzplM4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "print(f'Intercept : {model.intercept_}')\n",
-        "print(f'Slope : {model.coef_}')"
+        "print(f'Intercept : {model.intercept_}') #menampilkan nilai intercept\n",
+        "print(f'Slope : {model.coef_}') #menampilkan nilai slope"
       ],
       "metadata": {
         "colab": {
@@ -1032,7 +1117,7 @@
         "id": "RlSZRcWYUvhZ",
         "outputId": "eb2a3d11-3e9e-4452-91dd-5f803343ebe3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,11 +1139,20 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Memprediksi harga tanah menggunakan model yang telah dilatih"
+      ],
+      "metadata": {
+        "id": "2iunTYOoqgbl"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "luas_tanah = np.array([12,15,20]).reshape(-1,1)\n",
-        "print(luas_tanah.shape)\n",
-        "luas_tanah"
+        "luas_tanah = np.array([12,15,20]).reshape(-1,1) #Membuat Array NumPy luas_tanah\n",
+        "print(luas_tanah.shape) #Menampilkan Bentuk Array\n",
+        "luas_tanah #Menampilkan Isi dari luas_tanah"
       ],
       "metadata": {
         "colab": {
@@ -1067,7 +1161,7 @@
         "id": "RT16B9MKVLlG",
         "outputId": "7dfd0a06-d3ed-47b3-a0cd-0234c38c033d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,10 +1185,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Memprediksi harga tanah dan menampilkan hasil prediksi"
+      ],
+      "metadata": {
+        "id": "h0rlN2PIrEmh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "harga_prediksi = model.predict(luas_tanah)\n",
-        "harga_prediksi"
+        "harga_prediksi = model.predict(luas_tanah) #menggunakan model regresi linear yang sudah dilatih untuk memprediksi harga tanah berdasarkan nilai luas tanah yang diberikan dalam luas_tanah.\n",
+        "harga_prediksi #Menampilkan Hasil Prediksi"
       ],
       "metadata": {
         "colab": {
@@ -1103,7 +1206,7 @@
         "id": "FAhazuCbVcW1",
         "outputId": "624a6e5a-1bdd-4ed3-91b7-677ed7410e07"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1130,7 +1233,7 @@
         "id": "3VpKfkPAWvMR",
         "outputId": "4f7ad3e0-31a2-4276-f34a-2fe3a7372d07"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1173,7 +1276,7 @@
       "metadata": {
         "id": "d1mJ60mIXPqK"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1199,7 +1302,7 @@
         "id": "ehgoVWEIXzcW",
         "outputId": "c8dccb92-c76f-4fcc-b1b8-4a1a28b094e5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1655,7 +1758,7 @@
         "id": "y2VDQNK0X7Rt",
         "outputId": "754d9449-d2f9-4610-e4fa-ccb426d64e1f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1678,7 +1781,7 @@
         "id": "CLRZkxRkYgJf",
         "outputId": "50b85b84-90bd-4b4b-dbc6-a5d6fcb531a6"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1704,7 +1807,7 @@
         "id": "9Amr5raDZmCk",
         "outputId": "14dd9417-3516-43d9-b33b-f89861757943"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
