--- a/Praktikum1/SimpleLinearRegression.ipynb
+++ b/Praktikum1/SimpleLinearRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+4NZgszJ/HVdyuE9kIUjx",
+      "authorship_tag": "ABX9TyPH5nTb+TX8S74uCmuHRLf+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1223,8 +1223,8 @@
     {
       "cell_type": "code",
       "source": [
-        "for luas, hrg in zip(luas_tanah, harga_prediksi):\n",
-        "  print(f'Luas Tanah {luas}:harga prediksi: {hrg}')"
+        "for luas, hrg in zip(luas_tanah, harga_prediksi):#Menggabungkan luas tanah dan harga prediksi satu per satu dalam satu perulangan.\n",
+        "  print(f'Luas Tanah {luas}:harga prediksi: {hrg}') #Menampilkan hasil dalam format yang mudah dibaca."
       ],
       "metadata": {
         "colab": {
@@ -1265,11 +1265,26 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "X_train dan y_train digunakan untuk melatih model regresi linear.\n",
+        "\n",
+        "X_test dan y_test digunakan untuk mengukur akurasi model setelah pelatihan.\n",
+        "\n",
+        "reshape(-1,1) diperlukan agar data sesuai dengan format input yang diharapkan oleh scikit-learn"
+      ],
+      "metadata": {
+        "id": "hcXDvew3wI_l"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "#Membuat Data Training\n",
         "X_train = np.array([6,8,10,14,18]).reshape(-1,1)\n",
         "y_train = np.array([7,9,13,17.5,18])\n",
         "\n",
+        "#Membuat Data Testing\n",
         "X_test = np.array([9,9,11,16,12]).reshape(-1,1)\n",
         "y_test = np.array([11,8.5,15,18,11])"
       ],
@@ -1289,10 +1304,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Kode ini digunakan untuk melatih model regresi linear menggunakan data training."
+      ],
+      "metadata": {
+        "id": "fN1rX8CqxAKJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "model = LinearRegression()\n",
-        "model.fit(X_train,y_train)"
+        "model = LinearRegression() #Membuat Model Regresi Linear\n",
+        "model.fit(X_train,y_train) #Melatih Model dengan Data Training"
       ],
       "metadata": {
         "colab": {
@@ -1744,12 +1768,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Kode ini digunakan untuk mengukur akurasi model regresi linear menggunakan R-squared"
+      ],
+      "metadata": {
+        "id": "EQwKkgmyxdhM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import r2_score\n",
-        "y_pred = model.predict(X_test)\n",
-        "r_squared = r2_score(y_test,y_pred)\n",
-        "print(f'R-Squared : {r_squared}')\n"
+        "from sklearn.metrics import r2_score #import r2_score dari library sklearn.metrics\n",
+        "y_pred = model.predict(X_test) #Memprediksi Harga Tanah pada Data Uji\n",
+        "r_squared = r2_score(y_test,y_pred) #Menghitung R-Squared\n",
+        "print(f'R-Squared : {r_squared}') #Menampilkan Hasil"
       ],
       "metadata": {
         "colab": {
@@ -1772,7 +1805,7 @@
     {
       "cell_type": "code",
       "source": [
-        "y_pred"
+        "y_pred #y_pred berisi hasil prediksi harga tanah berdasarkan model regresi linear yang telah dilatih."
       ],
       "metadata": {
         "colab": {
